add leaderboard for induvidual playlist / leaderboards page

--- a/src/pages/Game/Game.scss
+++ b/src/pages/Game/Game.scss
@@ -26,6 +26,10 @@
         border: none;
         border-radius: 30px;
         font-size: 1.1rem;
+
+        &--correct {
+            background-color: green;
+        }
     }
 
     &__modal {
