--- a/src/pages/Game/Game.scss
+++ b/src/pages/Game/Game.scss
@@ -3,30 +3,114 @@
 .game {
     display: flex;
     flex-direction: column;
-    margin-bottom: 128px;
+    margin: 16px 16px 128px 16px;
 
     @include tablet {
-        flex-direction: row;
+        margin-top: 32px;
+    }
+
+    @include desktop {
+        margin-top: 64px;
     }
 
     &__container {
         flex: 1;
+
+        @include tablet {
+            display: flex;
+            flex-direction: row;
+            justify-content: space-between;
+            gap: 16px;
+        }
     }
+
+    &__main {
+        flex:1;
+    }
+
+    &__score {
+        font-size: 2rem;
+
+        @include tablet {
+            margin-top: 0;
+        }
+
+        @include desktop{
+            font-size: 4rem;
+        }
+    }
+
+    &__left {
+        flex: 1;
+
+        @include tablet {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+        }
+    }
+
+    &__image {
+        width: 50%;
+
+        @include tablet {
+            max-width: 200px;
+        }
+    }
+
+    &__playlist-name {
+        
+        @include tablet {
+            font-size: 2rem;
+            text-align: left
+        }
+
+        // @include desktop {
+        //     font-size: 4rem;
+        // }
+    }
+
+    &__information {
+        display: block;
+
+        @include tablet {
+            display: none;
+        }
+
+        &--left {
+            display: none;
+            @include tablet{
+                width: 100%;
+                display: flex;
+                align-items: center;
+                justify-content: flex-start;
+                gap: 32px;
+            }
+        }
+    }
+
+    
     &__answers {
         display: flex;
         flex-direction: column;
         gap: 16px;
         align-items: center;
         margin-top: 16px;
+
+        
     }
 
     &__button {
-        width: 300px;
+        width: 100%;
         padding: 16px 32px;
-        background-color: gray;
-        border: none;
+        background-color: black;
+        border: 1px solid gray;
         border-radius: 30px;
         font-size: 1.1rem;
+
+        @include tablet {
+            width: 400px
+        }
 
         &--correct {
             background-color: green;
@@ -42,7 +126,7 @@
     }
 
     &__modal-button {
-        width: 300px;
+        width: 100%;
         padding: 16px 32px;
         background-color: white;
         color: black;
@@ -50,11 +134,28 @@
         border-radius: 30px;
         font-size: 1.1rem;
         margin-top: 16px;
+
+        @include tablet {
+            width: 400px;
+        }
     }
 }
 
-#canvas {
+.audio {
+    &__player {
+        display: none;
+    }
+    &__visualizer {
+        width: 100%;
+    }
+
+}
+
+#audio-canvas {
     width: 100%;
-    height: 200px;
-  }
-  
+
+    @include tablet {
+
+        max-width: 400px;
+    }
+}
