--- a/src/components/UsernameModal/UsernameModal.scss
+++ b/src/components/UsernameModal/UsernameModal.scss
@@ -23,6 +23,24 @@
     width: 100%;
     height: 100%;
 
+    &__brand {
+        display: flex;
+        align-items: center;
+        gap: 16px;
+        padding: 32px;
+    }
+
+    &__logo {
+        height: 100px;
+        border-radius: 4px;
+    }
+
+    &__name {
+        text-align: left;
+        color: green;
+        font-size: 2rem;
+    }
+
     &__heading {
         justify-self: flex-start;
     }
@@ -36,6 +54,13 @@
         background-color: transparent;
         align-self: flex-start;
         padding: 16px;
+        color: gray;
+        font-size: 0.8rem;
+
+        @include tablet {
+            align-self: center;
+            width: 300px;
+        }
     }
 
     &__input {
@@ -47,7 +72,12 @@
         width: 100%;
 
         &::placeholder {
-            color: white;
+            color: gray;
+            font-size: 0.8rem;
+        }
+
+        @include tablet {
+            width: 300px;
         }
     }
 
