--- a/src/pages/Home/Home.scss
+++ b/src/pages/Home/Home.scss
@@ -1,4 +1,17 @@
+@use "../../styles/partials/mixins"as *;
+
 .home {
+
+    padding: 16px;
+
+    @include tablet {
+        padding: 32px;
+    }
+
+    @include desktop {
+        padding: 64px;
+    }
+
 
     &__playlists {
         display: flex;
@@ -6,5 +19,17 @@
         justify-content: center;
         gap: 16px;
         padding-bottom: 64px;
+        padding-top: 16px;
+
+        @include tablet {
+            padding-top: 32px;
+            gap: 32px;
+            row-gap: 64px;
+        }
+
+        @include desktop {
+            padding-top: 64px;
+            gap: 64px;
+        }
     }
 }
