--- a/src/pages/Leaderboards/Leaderboards.scss
+++ b/src/pages/Leaderboards/Leaderboards.scss
@@ -1,9 +1,12 @@
 @use "../../styles/partials/mixins" as *;
 
 .leaderboards {
+    padding: 16px;
+    padding-bottom: 128px;
+    
     &__wrapper {
 
-        @include desktop {
+        @include tablet {
             display: flex;
             flex-wrap: wrap;
             justify-content: center;
@@ -14,21 +17,20 @@
     &__leaderboard {
         margin-top: 64px;
         display: flex;
-
         flex-direction: column;
         align-items: center;
-
-        @include desktop {
-            width: 500px;
-        }
-
     }
 }
 
 .leaderboard {
 
+    &__scores {
+        width: 100%;
+    }
+
 
     &__name {
+        text-transform: capitalize;
 
         @include tablet {
             width: 400px;
