--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -1,9 +1,21 @@
-
+@use "../../styles/partials/mixins" as *;
 
 .header {
     display: flex;
-    // justify-content: center;
-    padding: 16px;
+    justify-content: space-between;
+    padding: 16px 16px;
+
+    @include tablet {
+        padding: 16px 64px;
+    }
+
+    @include desktop {
+        padding: 16px 128px;
+    }
+
+    &__brand-link {
+        text-decoration: none;
+    }
 
     &__brand {
         display: flex;
@@ -20,5 +32,24 @@
         text-align: left;
         color: green;
         font-size: 0.9rem;
+    }
+
+
+    &__items {
+        display: none;
+        gap: 32px;
+
+        @include desktop {
+            display: flex;
+        }
+    }
+
+    &__item {
+        list-style-type: none;
+    }
+    
+    &__link {
+        text-decoration: none;
+
     }
 }
