--- a/src/pages/Game/Game.scss
+++ b/src/pages/Game/Game.scss
@@ -129,6 +129,13 @@
         width: 100%;
     }
 
+    &__end-options {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
+
     &__modal-button {
         width: 100%;
         padding: 16px 32px;
