--- a/src/pages/Leaderboards/Leaderboards.scss
+++ b/src/pages/Leaderboards/Leaderboards.scss
@@ -3,6 +3,16 @@
 .leaderboards {
     padding: 16px;
     padding-bottom: 128px;
+
+    @include tablet {
+        padding: 16px 32px;
+        padding-bottom: 128px;
+    }
+
+    @include desktop {
+        padding: 16px 128px;
+        padding-bottom: 128px;
+    }
     
     &__wrapper {
 
@@ -11,6 +21,10 @@
             flex-wrap: wrap;
             justify-content: center;
             gap: 64px;
+        }
+
+        @include desktop {
+            justify-content: space-between;
         }
     }
 
