--- a/src/components/Login/Login.scss
+++ b/src/components/Login/Login.scss
@@ -1,6 +1,6 @@
 @use "../../styles/partials/mixins" as *;
 
-.username-modal__wrapper {
+.username-modal {
     position: fixed;
     top: 0;
     left: 0;
@@ -10,18 +10,18 @@
     display: flex;
     justify-content: center;
     align-items: center;
-}
 
-.username-modal {
-    background-color: rgb(00, 00, 00);
-    border-radius: 4px;
-    padding: 16px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    width: 100%;
-    height: 100%;
+    .username-modal__wrapper {
+        background-color: rgb(00, 00, 00);
+        border-radius: 4px;
+        padding: 16px;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        width: 100%;
+        height: 100%;
+    }
 
     &__brand {
         display: flex;
@@ -50,6 +50,17 @@
         font-weight: bold;
     }
 
+    
+}
+
+.login {
+    &__form {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+    }
+
     &__label {
         background-color: transparent;
         align-self: flex-start;
@@ -64,25 +75,23 @@
     }
 
     &__input {
-        background-color: transparent;
-        border: 1px solid white;
-        padding: 16px 0px;
-        border-radius: 4px;
-        font-size: 1.1rem;
-        width: 100%;
-
-        &::placeholder {
-            color: gray;
-            font-size: 0.8rem;
-        }
-
-        @include tablet {
-            width: 300px;
-        }
+        @include input;
     }
 
     &__submit {
-        background-color: green;
+        @include button--primary;
+    }
+}
+
+
+.guest {
+
+    &__form {
+
+    }
+
+    &__button {
+        background-color: gray;
         width: 100%;
         padding: 16px 32px;
         color: white;
