--- a/src/pages/Leaderboards/Leaderboards.scss
+++ b/src/pages/Leaderboards/Leaderboards.scss
@@ -23,9 +23,9 @@
             gap: 64px;
         }
 
-        @include desktop {
-            justify-content: space-between;
-        }
+        // @include desktop {
+        //     justify-content: sp;
+        // }
     }
 
     &__leaderboard {
