login/signup style improvements. Each round is now worth max 1000 points

--- a/src/pages/Game/Game.scss
+++ b/src/pages/Game/Game.scss
@@ -103,6 +103,10 @@
         width: 100%;
     }
 
+    &__points {
+        margin-top: 16px;
+    }
+
     &__button {
         width: 100%;
         padding: 16px 32px;
