--- a/src/components/Login/Login.scss
+++ b/src/components/Login/Login.scss
@@ -10,17 +10,17 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    overflow: scroll;
 
     .username-modal__wrapper {
         background-color: rgb(00, 00, 00);
         border-radius: 4px;
-        padding: 16px;
+        padding: 32px;
         display: flex;
         flex-direction: column;
         align-items: center;
         justify-content: center;
         width: 100%;
-        height: 100%;
     }
 
     &__brand {
@@ -50,15 +50,25 @@
         font-weight: bold;
     }
 
-    
+
 }
 
 .login {
+    width: 100%;
+    @include tablet {
+        width: auto;
+    
+    }
     &__form {
         display: flex;
         flex-direction: column;
         align-items: center;
         justify-content: center;
+        width: 100%;
+
+        @include tablet {
+            width: auto;
+        }
     }
 
     &__label {
@@ -80,14 +90,28 @@
 
     &__submit {
         @include button--primary;
+        margin-top: 32px;
+    }
+
+    &__or {
+        margin-top: 16px;
     }
 }
 
 
 .guest {
+    width: 100%;
+
+    @include tablet {
+        width: auto;
+    }
 
     &__form {
+        width: 100%;
 
+        @include tablet {
+            width: auto;
+        }
     }
 
     &__button {
@@ -103,5 +127,20 @@
         @include tablet {
             width: 300px
         }
+    }
+}
+
+.signup-button-wrapper {
+    display: flex;
+    flex-direction: column;
+    margin-top: 16px;
+    width: 100%;
+
+    &__button {
+        min-width: 210px;
+    }
+
+    &__link {
+        margin-top: 0
     }
 }
