--- a/src/pages/Signup/Signup.scss
+++ b/src/pages/Signup/Signup.scss
@@ -1,6 +1,11 @@
 @use "../../styles/partials/mixins" as *;
 
 .signup {
+    min-height: 100vh;
+    position: relative;
+    z-index: 5;
+    width: 100%;
+    padding: 16px;
 
     &__form {
         display: flex;
