--- a/src/components/Login/Login.scss
+++ b/src/components/Login/Login.scss
@@ -21,6 +21,7 @@
         align-items: center;
         justify-content: center;
         width: 100%;
+        min-height: 100%;
     }
 
     &__brand {
