--- a/src/pages/Game/Game.scss
+++ b/src/pages/Game/Game.scss
@@ -133,6 +133,10 @@
         width: 100%;
     }
 
+    &__final-score {
+        padding-top: 16px;
+    }
+
     &__end-options {
         display: flex;
         flex-direction: column;
