--- a/src/pages/Signup/Signup.scss
+++ b/src/pages/Signup/Signup.scss
@@ -7,15 +7,36 @@
     width: 100%;
     padding: 16px;
 
+    
+    &__brand {
+        display: flex;
+        align-items: center;
+        gap: 16px;
+        padding: 32px 0;
+        justify-content: center;
+    }
+
+    & a {
+        text-decoration: none;
+    }
+
+    &__logo {
+        height: 100px;
+        border-radius: 4px;
+    }
+
+    &__name {
+        text-align: left;
+        color: green;
+        font-size: 2rem;
+        text-decoration: none;
+    }
+
     &__form {
         display: flex;
         flex-direction: column;
         align-items: center;
         gap: 16px;
-
-    }
-
-    &__label {
 
     }
 
