--- a/src/pages/Game/Game.scss
+++ b/src/pages/Game/Game.scss
@@ -1,5 +1,17 @@
 @use "../../styles/partials/mixins" as *;
 
+
+.start-game-modal {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100vw;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
 .game {
     display: flex;
     flex-direction: column;
